# AIops-k8s-issue-agent

./: .env  .env.example  README.md  k8s_diagnostic_agent.py  main.py  pyproject.toml  setup.py
src/config/: config.py
src/core/: analysis.py  condition_router.py  executor.py  models.py  user_input_parser.py
src/utils/: llm_client.py  tools.py
utils/: llm_client.py
